--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,6 +8,7 @@ pull_request_rules:
       - base=main
       - "#approved-reviews-by>=1"
       - check-success=pr-merge - Pull Request
+      - check-success=pr-head - Pull Request
     actions:
       queue:
         name: default
